Some more structure to django_prototype. Some how python wants to crash when trying to run pyper_runs_yuan.runsemf81 now.

--- a/django_proto/templates/home.html
+++ b/django_proto/templates/home.html
@@ -21,7 +21,14 @@
 				<input type="submit" value="Upload" />
 			</form>
 		</div>
-		
-		
+		<p>
+		Already uploaded files:
+			<div class="files">
+				{% for f in files %}
+					<a href="/runparams/{{ f.id }}/">{{ f.time }} {{ f.name }}</a><br>
+				{% endfor %}
+			</div>
+		</p>
+				
 	</body>
 </html>
