Changed some templates and added new project_home into lstrings_empty.py.

--- a/django_proto/templates/results.html
+++ b/django_proto/templates/results.html
@@ -15,7 +15,7 @@
 		</div>
 		
 		<div class="results">
-			<img src="{{ r_runs.res_pic }}">
+			<img src="{{ script_runs.res_pic }}">
 			
 		</div>
 		
