--- a/django_proto/templates/home.html
+++ b/django_proto/templates/home.html
@@ -1,34 +1,44 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 	<head>
-    	<title> Stemweb - home </title>
+    	<title>
+    		{% block title %} 
+    			Stemweb - home 
+    		{% endblock %}
+    	</title>
     	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   	</head>
 	
 	<body>
 		<!-- Some introductory text or banner !-->
 		<div class="intro">
+			{% block intro %}
 			This is the home page of django prototype for STAM's web project <br>
 			Stemweb. Feel free to try uploading your .nex files and run them <br>
 			or run already uploaded files. <br>
 			<br>
+			{% endblock %}
 		</div>
 		
-		<div class="upload">
+		{% block content %}
+		<div class="form">
+			{% block form %}
 			<form action="/upload" enctype="multipart/form-data" method="post">
 				{% csrf_token %}
 				{{ form.as_p }}
 				<input type="submit" value="Upload" />
 			</form>
-		</div>
-		<p>
-		Already uploaded files:
-			<div class="files">
+			{% endblock %}
+		</div>	
+		<div class="files">
+			{% block files %}
+				Already uploaded files:<br><br>
 				{% for f in files %}
 					<a href="/runparams/{{ f.id }}/">{{ f.time }} {{ f.name }}</a><br>
 				{% endfor %}
-			</div>
-		</p>
+			{% endblock %}
+		</div>
+		{% endblock %}
 				
 	</body>
 </html>
