Debugged some code. Now django-part is working but pyper/R is still missing something

--- a/django_proto/templates/runparams.html
+++ b/django_proto/templates/runparams.html
@@ -1,7 +1,7 @@
 {% extends "home.html" %}
 
 {% block title %} 
-	Stemweb - run {{input_file.name}}  
+	Stemweb - run parameters {{input_file.name}}  
 {% endblock %}
   
 {% block intro %}
