--- a/django_proto/templates/results.html
+++ b/django_proto/templates/results.html
@@ -1,23 +1,16 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
-<html>
-	<head>
-    	<title> Stemweb - results for {{input_file.name}}  </title>
-    	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-  	</head>
-	
-	<body>
-		<!-- Some introductory text or banner !-->
-		<div class="intro">
-			Results for file {{ input_file.name }} / {{ input_file.id }} with parameters. 
-			<br>
-			Absolute path to file: {{ input_file.path }}
-			<br>
-		</div>
+{% extends 'home.html' %}
+
+{% block title %} 
+	Stemweb - results for {{input_file.name}}
+{% endblock %}
+
+{% block intro %}
+	Results for file {{ input_file.name }} / {{ input_file.id }} with parameters. 
+	<br>
+	Absolute path to file: {{ input_file.path }}
+	<br><br>
+{% endblock %}
 		
-		<div class="results">
-			<img src="{{ script_runs.res_pic }}">
-			
-		</div>
-		
-	</body>
-</html>
+{% block content %}
+	<img src="{{ script_runs.res_pic }}">
+{% endblock %}			
