--- a/django_proto/templates/results.html
+++ b/django_proto/templates/results.html
@@ -1,10 +1,14 @@
-{% extends 'layout_proto.html' %}
+{% extends 'home.html' %}
 
 {% block title %} 
 	Stemweb - results for {{input_file.name}}
 {% endblock %}
 
-{% block main_content %}
+{% block subpage_index_title %}
+	Some other information here
+{% endblock %}
+
+{% block subpage_content %}
 	Results for file {{ srun.input_file.name }} / {{ srun.input_file.id }} <br>
 	Iterations: {{ srun.itermax }} <br>
 	Simultaneous runs: {{ srun.runmax }} <br>
