--- a/django_proto/templates/results.html
+++ b/django_proto/templates/results.html
@@ -5,20 +5,32 @@
 {% endblock %}
 
 {% block subpage_index_title %}
-	Some other information here
+	<h1>Some info maybe</h1>
+{% endblock %}
+
+{% block subpage_index_table %}
+
 {% endblock %}
 
 {% block subpage_content %}
+	<h1>Run's results</h1>
+	
+	<p>
+	This is the best tree for this run.
+	</p>
+	
+	<img src="{{ MEDIA_URL }}{{ srun.input_file.name }}/{{srun.input_file.id}}/{{ srun.id }}/{{srun.res_pic}}" 
+		 alt="{{ MEDIA_URL }}{{ srun.input_file.name }}/{{srun.input_file.id}}/{{ srun.id }}/{{srun.res_pic}}" />
+	
+	<p>
+	Some debug info:<br>
 	Results for file {{ srun.input_file.name }} / {{ srun.input_file.id }} <br>
 	Iterations: {{ srun.itermax }} <br>
 	Simultaneous runs: {{ srun.runmax }} <br>
 	<br>
 	Local absolute path to input file: {{ srun.input_file.path }}
-	<br>
-	<br>
-
+	
 	Resulting graphs url: {{ MEDIA_URL }}{{ srun.input_file.name }}/{{srun.input_file.id}}/{{ srun.id }}/{{srun.res_pic}} <br>
-	Resulting graph for this run was:<br>
-	<img src="{{ MEDIA_URL }}{{ srun.input_file.name }}/{{srun.input_file.id}}/{{ srun.id }}/{{srun.res_pic}}" 
-		 alt="{{ MEDIA_URL }}{{ srun.input_file.name }}/{{srun.input_file.id}}/{{ srun.id }}/{{srun.res_pic}}" />
+	</p>
+	
 {% endblock %}			
