settings.py *	Added SITE_ROOT. This will always point to directory there settings.py is. *	Changed MEDIA_ROOT and STATIC_ROOT to be joined with SITE_ROOT and 'media' or 'static', respectively.
django_proto/file_operations.py
*	Changed default upload path to MEDIA_ROOT/users.

django_proto/templates/
*	Renamed layout_proto.html to base.html
*	Added some debug text to various templates
*	moved stemweb.css -> Stemweb/media/css/
*	Changed loading of stemweb.css to be depended on MEDIA_ROOT instead of /media/.

local/lstrings.py
*	Removed default_upload_path
*	Removed TEMPLATE_DIRS

.gitignore
*	Added media/users/* to ignore

--- a/django_proto/templates/home.html
+++ b/django_proto/templates/home.html
@@ -1,4 +1,4 @@
-{% extends "layout_proto.html" %}
+{% extends "base.html" %}
 
 {% block title %} Stemweb - home {% endblock %}
 
@@ -31,10 +31,9 @@
 		{% endif %}
 			
 		<p class="development_note">
-		I was thinking to use this left-hand div as news section. Uploaded files will be in
+		I was thinking to use this left-hand div as news section. File management will be in
 		user's own 'Files'-tab later. There will be option to keep files open to
-		'public', 'group' or 'private' when you upload them first time 
-		(or atleast if it can be done easily enough).
+		'public', 'group' or 'private' (or atleast if it can be done easily enough).
 		</p>
 	{% endblock %}
 	</div>
@@ -68,6 +67,13 @@
 			</form>
 			{% endblock %}
 		</div>	
+		
+		{% if debug %}
+		<p class="development_note">
+			This is just a prototype in development. A lot of valuable information is still missing.
+		</p>
+		{% endif %}
+		
 	{% endblock %}
 	</div>
 		
