--- a/django_proto/templates/base.html
+++ b/django_proto/templates/base.html
@@ -3,11 +3,11 @@
 	<head>
     	<title>
     		{% block title %} 
-    			Stemweb - layout prototype 
+    			Stemweb - base layout
     		{% endblock %}
     	</title>
     	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    	<link rel="stylesheet" type="text/css" href="/media/stemweb.css" />
+    	<link rel="stylesheet" type="text/css" href="/media/css/stemweb.css" />
     	
 		<!-- 
 			Let google handle jQuery source's for faster page viewing. 
@@ -19,7 +19,7 @@
     	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.16/jquery-ui.min.js" type="text/javascript"></script>
     	
     	<!-- Local javascript files -->
-    	<script src="/media/js/" type="text/javascript"></script>
+    	<script src="{{ MEDIA_URL }}javascript/" type="text/javascript"></script>
     	
     	<!--  
     	<script type="text/javascript">
