--- a/django_proto/templates/base.html
+++ b/django_proto/templates/base.html
@@ -7,7 +7,7 @@
     		{% endblock %}
     	</title>
     	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    	<link rel="stylesheet" type="text/css" href="/media/css/stemweb.css" />
+    	<link rel="stylesheet" type="text/css" href="{{ MEDIA_URL }}css/stemweb.css" />
     	
 		<!-- 
 			Let google handle jQuery source's for faster page viewing. 
